# collaborative-editor-ai

./: .dockerignore  .env.example  .gitignore  DEMO.md  DEVIATIONS.md  Makefile  README.md  docker-compose.yml  package.json  run.sh  software assignment.md
.claude/: launch.json
ai-service/: README.md
assignment2-report/: README.md  main.aux  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc
backend/: .env.example  .gitignore  CONTRACT.md  Dockerfile  README.md  package-lock.json  package.json  server.js
backend_fastapi/: .env.example  Dockerfile  README.md  pyproject.toml
backend_fastapi/app/: config.py  database.py  deps.py  document_access.py  errors.py  idempotency.py  main.py  rate_limit.py  schemas.py  security.py  session_token.py
backend_fastapi/app/ai/: __init__.py  prompts.py  providers.py  service.py
backend_fastapi/app/routers/: __init__.py  ai.py  auth.py  document_crud.py  documents.py  exports.py  health.py  permissions.py  sessions.py  share_links.py  versions.py
backend_fastapi/tests/: test_ai.py  test_auth.py  test_documents.py
config/: README.md
docs/: assignment2-change-log.md  assignment2-contracts.md  assignment2-current-state.md  assignment2-report-addendum.md  assignment2-staged-plan.md  assignment2-work-split.md  manual-testing-checklist.md
final-report/: .gitignore  Makefile  README.md  main.tex  package-lock.json  package.json  presentation-script.md
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
realtime/: Dockerfile  README.md  (+2 more)
(+162 files in other folders)
